<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/common_search_bar"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:background="@color/blue"
        android:elevation="3dp"
        >
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:src="@drawable/mz_titlebar_ic_back"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/btn_goSearch"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:text="搜索"
            android:textSize="18sp"
            android:textColor="@color/light_white"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/searchIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_toRightOf="@id/btn_back"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/mz_ic_tab_search_normal"/>
        <AutoCompleteTextView
            android:id="@+id/searchview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingLeft="35dp"
            android:paddingRight="@dimen/mc_search_edit_padding_right"
            android:background="@drawable/mz_search_view_textfield_hover_color_dodgerblue"
            android:layout_toRightOf="@+id/btn_back"
            android:layout_toLeftOf="@id/btn_goSearch"
            android:layout_marginRight="5dp"
            android:hint="请输入内容"
            android:imeOptions="actionNone|flagNoFullscreen|actionSearch"
            android:inputType="text|textAutoComplete"
            android:textColor="@color/white"
            android:textColorHint="@color/light_white"
            android:textCursorDrawable="@drawable/white_cursor"
            android:layout_centerVertical="true"
            />
        <ImageView
            android:id="@+id/delete"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="5dp"
            android:scaleType="center"
            android:src="@drawable/mz_titlebar_search_layout_ic_delete_white"
            android:visibility="gone" />

    </RelativeLayout>
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:elevation="3dp">

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        app:tabIndicatorHeight="4dp"
        android:layout_marginLeft="50dp"
        app:tabIndicatorColor="@color/half_white"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/half_white"
        android:visibility="gone"
        />

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_guide"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            app:tabIndicatorHeight="4dp"
            android:layout_marginLeft="50dp"
            app:tabIndicatorColor="@color/half_white"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/half_white"
            />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/select_location"
        android:layout_width="match_parent"
        android:layout_height="@dimen/address_select_point_height"
        android:background="@color/white"
        android:orientation="horizontal"
        android:visibility="visible">
       <FrameLayout
           android:id="@+id/my_location_layout"
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="1">
        <TextView
            android:id="@+id/my_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/mz_item_background"
            android:gravity="center"
            android:paddingBottom="@dimen/search_map_select_point_padding"
            android:paddingTop="@dimen/search_map_select_point_padding"
            android:text="@string/current_location"
            android:textColor="@color/mz_theme_color_dodgerblue"
            android:textSize="@dimen/search_history_title_text_size" />
        <View
            style="@style/separatorVertical"
            android:layout_gravity="right|center_vertical"
            android:layout_height="24dp" />
    </FrameLayout>

        <FrameLayout
            android:id="@+id/gps_location_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/gps_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/mz_item_background"
                android:gravity="center"
                android:paddingBottom="@dimen/search_map_select_point_padding"
                android:paddingTop="@dimen/search_map_select_point_padding"
                android:text="@string/gps_location"
                android:textColor="@color/mz_theme_color_dodgerblue"
                android:textSize="@dimen/search_history_title_text_size" />
            <View
                style="@style/separatorVertical"
                android:layout_gravity="right|center_vertical"
                android:layout_height="24dp" />
        </FrameLayout>
        <FrameLayout
            android:id="@+id/common_address_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        <TextView
            android:id="@+id/map_select_bookmark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/mz_item_background"
            android:gravity="center"
            android:paddingBottom="@dimen/search_map_select_point_padding"
            android:paddingTop="@dimen/search_map_select_point_padding"
            android:text="收藏夹"
            android:textColor="@color/mz_theme_color_dodgerblue"
            android:textSize="@dimen/search_history_title_text_size" />
            <View
                style="@style/separatorVertical"
                android:layout_gravity="right|center_vertical"
                android:layout_height="24dp" />
        </FrameLayout>
        <FrameLayout
            android:id="@+id/map_select_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical">
        <TextView
            android:id="@+id/map_select_point"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/mz_item_background"
            android:gravity="center"
            android:paddingBottom="@dimen/search_map_select_point_padding"
            android:paddingTop="@dimen/search_map_select_point_padding"
            android:text="@string/map_select_point"
            android:textColor="@color/mz_theme_color_dodgerblue"
            android:textSize="@dimen/search_history_title_text_size" />
        </FrameLayout>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.v4.view.ViewPager
        android:id="@+id/vp_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_guide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>
</LinearLayout>